err.log
In file included from ./include/base.h:21:0,
                 from ./src/control.c:9:
C:/Qt/4.8.6/mingw32/i686-w64-mingw32/include/winsock2.h:15:2: warning: #warning Please include winsock2.h before windows.h [-Wcpp]
 #warning Please include winsock2.h before windows.h
  ^
In file included from ./include/base.h:43:0,
                 from ./src/control.c:9:
./include/configs.h:12:0: warning: "LOG_DIR" redefined [enabled by default]
     #define LOG_DIR  "./log"
 ^
./include/configs.h:5:0: note: this is the location of the previous definition
     #define LOG_DIR  "c://Users//Public//Documents//YZYEduClient//Log"
 ^
./include/configs.h:13:0: warning: "LOG_ERR_FILE" redefined [enabled by default]
     #define LOG_ERR_FILE "./log/remote_monitor_err.log"
 ^
./include/configs.h:6:0: note: this is the location of the previous definition
     #define LOG_ERR_FILE "c://Users//Public//Documents//YZYEduClient//Log//remote_monitor_err.log"
 ^
In file included from ./include/base.h:44:0,
                 from ./src/control.c:9:
./include/socket.h:5:0: warning: "INVALID_SOCKET" redefined [enabled by default]
 #define INVALID_SOCKET -1
 ^
In file included from C:/Qt/4.8.6/mingw32/i686-w64-mingw32/include/winsock.h:35:0,
                 from C:/Qt/4.8.6/mingw32/i686-w64-mingw32/include/windows.h:92,
                 from ./include/base.h:20,
                 from ./src/control.c:9:
C:/Qt/4.8.6/mingw32/i686-w64-mingw32/include/psdk_inc/_socket_types.h:16:0: note: this is the location of the previous definition
 #define INVALID_SOCKET (SOCKET)(~0)
 ^
In file included from ./include/base.h:44:0,
                 from ./src/control.c:9:
./include/socket.h:53:1: warning: no semicolon at end of struct or union [enabled by default]
 };
 ^
In file included from ./src/control.c:9:0:
./include/base.h:75:0: warning: "ERROR" redefined [enabled by default]
 #define ERROR 1
 ^
In file included from C:/Qt/4.8.6/mingw32/i686-w64-mingw32/include/windows.h:71:0,
                 from ./include/base.h:20,
                 from ./src/control.c:9:
C:/Qt/4.8.6/mingw32/i686-w64-mingw32/include/wingdi.h:75:0: note: this is the location of the previous definition
 #define ERROR 0
 ^
In file included from ./src/control.c:9:0:
./include/base.h:79:0: warning: "MAX_FILENAMELEN" redefined [enabled by default]
 #define MAX_FILENAMELEN 128
 ^
In file included from ./include/base.h:43:0,
                 from ./src/control.c:9:
./include/configs.h:17:0: note: this is the location of the previous definition
 #define MAX_FILENAMELEN 256
 ^
./src/control.c: In function 'simulate_keyboard':
./src/control.c:56:9: warning: implicit declaration of function 'get_keycode' [-Wimplicit-function-declaration]
  struct keycode *code = get_keycode(key->key); 
         ^
./src/control.c:56:25: warning: initialization makes pointer from integer without a cast [enabled by default]
  struct keycode *code = get_keycode(key->key); 
                         ^
./src/control.c: In function 'init_simulate':
./src/control.c:128:14: error: 'keybd_key' undeclared (first use in this function)
  for (i = 0; keybd_key[i].value != -1; i++)
              ^
./src/control.c:128:14: note: each undeclared identifier is reported only once for each function it appears in
./src/control.c:130:3: warning: implicit declaration of function 'set_keycode' [-Wimplicit-function-declaration]
   ret = set_keycode(keybd_key[i].key, &keybd_key[i]);
   ^
./src/control.c:133:4: warning: implicit declaration of function 'log_msg' [-Wimplicit-function-declaration]
    DEBUG("ret %d hash map put error i %d keybd_key[i].sdl_key %d keybd_key[i].simulate_key %d", ret ,i, 
    ^
make: *** [control.o] Error 1
